tests/lean/exact_partial2.lean.expected.out
exact_partial2.lean:3:21: error: don't know how to synthesize placeholder
a b c : nat,
h₁ : a = b,
h₂ : b = c
⊢ b = c
exact_partial2.lean:3:2: error:invalid 'exact' tactic, term still contains metavariables after elaboration
  eq.trans h₁ ?M_1
proof state:
a b c : nat,
h₁ : a = b,
h₂ : b = c
⊢ a = c
exact_partial2.lean:4:0: error: don't know how to synthesize placeholder
a b c : nat,
h₁ : a = b,
h₂ : b = c
⊢ a = c
exact_partial2.lean:4:0: error: failed to add declaration '14.0' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  λ (a b c : nat) (h₁ : …) (h₂ : …),
    ?M_1
